add curl for PYWRAP=false

--- a/.github/actions/build-ocp-source/action.yml
+++ b/.github/actions/build-ocp-source/action.yml
@@ -182,6 +182,8 @@ runs:
           curl -L -O https://github.com/bernhard-42/__temp_artefacts__/releases/download/v7.9/OCP_src_stubs_macOS-latest.zip
                      
         elif [[ ${{ inputs.os }} == "ubuntu-22.04" || ${{ inputs.os }} == "ubuntu-22.04-arm" ]]; then
+          DEBIAN_FRONTEND=noninteractive apt-get install -qq curl > /dev/null 2>&1
+
           # curl -L -O https://github.com/CadQuery/OCP/releases/download/${{ env.OCP }}/OCP_src_stubs_ubuntu-latest.zip
 
           curl -L -O https://github.com/bernhard-42/__temp_artefacts__/releases/download/v7.9/OCP_src_stubs_Ubuntu-latest.zip
