--- a/pypi/pyproject.toml
+++ b/pypi/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cadquery-ocp"
-version = "X.X.X.X"
+version = "7.9.2.0"
 description = "Python wrapper for Open CASCADE Technology 3D geometry library based on the official CadQuery/OCP sources"
 authors = [{ name = "Bernhard Walter" }]
-requires-python = ">=3.10,<3.14"
+requires-python = ">=3.10,<3.15"
 readme = "README.md"
 
 [tool.setuptools]
