ensure, curl is always installed in ubuntu container

--- a/.github/actions/build-ocp-source/action.yml
+++ b/.github/actions/build-ocp-source/action.yml
@@ -44,7 +44,7 @@ runs:
     # - - -
 
     - name: (Linux) Install gl headers [PYWRAP=true]
-      if: env.PYWRAP == 'false' && runner.os == 'Linux' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
+      if: env.PYWRAP == 'false' && runner.os == 'Linux'
       shell: bash -l {0}
       run: |
         # (Linux) Install curl [PYWRAP=true]
