change download path to use full ocp version

--- a/.github/actions/build-ocp-source/action.yml
+++ b/.github/actions/build-ocp-source/action.yml
@@ -193,18 +193,18 @@ runs:
         if [[ ${{ inputs.os }} == "macos-13" || ${{ inputs.os }} == "macos-15" ]]; then
           # curl -L -O https://github.com/CadQuery/OCP/releases/download/${{ env.OCP }}/OCP_src_stubs_macOS-latest.zip
 
-          curl -L -O https://github.com/bernhard-42/__temp_artefacts__/releases/download/v7.9/OCP_src_stubs_macOS-latest.zip
+          curl -L -O https://github.com/bernhard-42/__temp_artefacts__/releases/download/v7.9.2/OCP_src_stubs_macOS-latest.zip
                      
         elif [[ ${{ inputs.os }} == "ubuntu-22.04" || ${{ inputs.os }} == "ubuntu-22.04-arm" ]]; then
 
           # curl -L -O https://github.com/CadQuery/OCP/releases/download/${{ env.OCP }}/OCP_src_stubs_ubuntu-latest.zip
 
-          curl -L -O https://github.com/bernhard-42/__temp_artefacts__/releases/download/v7.9/OCP_src_stubs_Ubuntu-latest.zip
+          curl -L -O https://github.com/bernhard-42/__temp_artefacts__/releases/download/v7.9.2/OCP_src_stubs_Ubuntu-latest.zip
 
         else
           # curl -L -O https://github.com/CadQuery/OCP/releases/download/${{ env.OCP }}/OCP_src_stubs_${{ inputs.os }}.zip
 
-          curl -L -O https://github.com/bernhard-42/__temp_artefacts__/releases/download/v7.9/OCP_src_stubs_Windows-2022.zip
+          curl -L -O https://github.com/bernhard-42/__temp_artefacts__/releases/download/v7.9.2/OCP_src_stubs_Windows-2022.zip
 
         fi
         unzip OCP_src_stubs_*
