--- a/.github/actions/build-ocp/action.yml
+++ b/.github/actions/build-ocp/action.yml
@@ -273,6 +273,7 @@ runs:
             -D CMAKE_C_COMPILER=clang -D CMAKE_CXX_COMPILER=clang++ \
             -D CMAKE_BUILD_TYPE=Release \
             -D CMAKE_OSX_DEPLOYMENT_TARGET="11.1" \
+            -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=OFF \
             -D CMAKE_CXX_FLAGS="-isystem $CONDA_PREFIX/include  -isystem $CONDA_PREFIX/include/python${{ inputs.python-version }} -fvisibility=hidden -w" \
             $VTK_DIR \
             -D OpenCASCADE_DIR=$HOME/opt/local/occt-${{ env.OCCT }}-${{ inputs.use-vtk }}/lib/cmake/opencascade \
